# ruyer

./: .gitignore  Cargo.toml  README.md
benches/: cornell_box.rs
examples/: gltf_render.rs
src/: lib.rs
src/camera/: mod.rs  perspective_camera.rs
src/geometry/: mod.rs  ray.rs  shape.rs  triangle.rs  vertex.rs
src/object/: mod.rs  pbr_material.rs
src/render/: mod.rs
src/sampling/: dists.rs  mod.rs
src/scene/: gltf.rs  material.rs  mod.rs  triangle.rs  triangle_idx.rs  triangle_ref.rs
