[package]
name = "ruyer"
version = "0.1.0"
edition = "2024"
autoexamples = false

[dependencies]
glam = "0.32"
gltf = { version = "1.4", features = ["KHR_materials_emissive_strength"] }
image = "0.25"
rand = "0.10"

[dev-dependencies]
approx = "0.5"
glam = { version = "0.32", features = ["approx"] }
clap = { version = "4.6", features = ["derive"] }
criterion = "0.5"

[[bench]]
name = "cornell_box"
harness = false

[profile.profiling]
inherits = "release"
debug = true          # Include debug symbols
strip = false         # Don't strip symbols
